<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cosmic_latte"
    android:paddingStart="200dp"
    android:paddingEnd="200dp"
    android:paddingTop="300dp"
    android:paddingBottom="300dp"
    android:id="@+id/admin_landing_page">



        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:onClick="buttonStudentsOnClick"
            android:text="@string/student_accounts"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/dark_green"
            android:onClick="buttonCoursesOnClick"
            android:text="@string/course_list"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/dark_green"
            android:onClick="buttonLogOutOnClick"
            android:text="@string/log_out"
            android:textAllCaps="false" />


</RelativeLayout>