...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/DelSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="buttonDeleteSec"
                    android:text="@string/text_for_delete_section_button_in_admin_side"
                    android:textAllCaps="false"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_margin="10dp"/>

                <EditText
                    android:id="@+id/DelSecID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_for_delete_section_id_text_box_in_add_a_section_page"
                    android:inputType="text"
                    android:layout_margin="10dp"
...
