...
                android:layout_margin="10dp"
                tools:ignore="Autofill" />
        </LinearLayout>


        <ListView
            android:id="@+id/CategoriesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cosmic_latte" />

</LinearLayout>
