<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/student_landing_page">

    <FrameLayout
        android:id="@+id/student_home_summary"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.StudentHomeFragment"
        android:background="@color/cosmic_latte"
        android:orientation="vertical">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:focusable="true">

                <TextView
                    android:id="@+id/pie_chart_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_green"
                    android:fontFamily="serif"
                    android:layout_weight="0"
                    android:padding="10dp"
                    android:text="@string/degree_progress_label_text_in_student_home_fragment"
                    android:textColor="@color/dark_brown"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:paddingTop="50dp"
                    android:paddingBottom="50dp"
                    android:background="@color/cosmic_latte" >
                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/degree_breakdown_pie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/cosmic_latte" />
                </LinearLayout>


                <TextView
                    android:id="@+id/enrolled_courses_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_green"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:layout_weight="0"
                    android:text="@string/enrolled_courses_label_text_for_student_home_fragment"
                    android:textColor="@color/dark_brown"
                    android:textSize="30sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="600dp">

                    <ListView
                        android:id="@+id/student_enrolled_courses"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cosmic_latte"
                        android:nestedScrollingEnabled="true"/>

                    <TextView
                        android:id="@+id/student_enrolled_courses_empty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/no_enrolled_courses_label_text_for_student_home_fragment"
                        android:textAlignment="center"
                        android:textColor="@color/dark_brown"
                        android:textSize="30sp" />


                </RelativeLayout>

                <TextView
                    android:id="@+id/required_courses_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_green"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:layout_weight="0"
                    android:text="@string/degree_required_courses_label_text_for_student_home_fragment"
                    android:textColor="@color/dark_brown"
                    android:textSize="30sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="500dp">

                    <ListView
                        android:id="@+id/student_required_courses"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cosmic_latte"
                        android:nestedScrollingEnabled="true"/>

                    <TextView
                        android:id="@+id/student_required_courses_empty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/no_degree_required_courses_label_text_for_student_home_fragment"
                        android:textAlignment="center"
                        android:textColor="@color/dark_brown"
                        android:textSize="30sp" />
                </RelativeLayout>


            </LinearLayout>
    </FrameLayout>
    </androidx.core.widget.NestedScrollView>

