<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AddCourseCategoryFragment"
    android:background="@color/cosmic_latte"




    >

    <ListView
        android:id="@+id/courses_list_in_add_courses"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>