<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cosmic_latte"
    android:id="@+id/advisor_landing_page">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/AdvisorStudentID"
            android:layout_width="240dp"
            android:layout_height="66dp"
            android:ems="10"
            android:hint="@string/student_id_hint_for_advisor_search_student_text_box"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:onClick="buttonAdvisorSearchStudent"
            android:padding="15dp"
            android:text="@string/search_students"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:onClick="exitAdvisor"
            android:padding="15dp"
            android:text="@string/log_out"
            android:textAllCaps="false" />

    </RelativeLayout>

</RelativeLayout>